# dynamicdecision

./: .gitignore  Cargo.toml  config.yaml  convert.sh  convert_data.py  data_conversion_script.py  ddm_data.py  generate.py  participants.txt  participants.yaml  run_program.sh  trim.sh
src/: arc_input.rs  dial_views.rs  main.rs
src/data/: mod.rs  partipant_data.rs
src/views/: arc_dichotomous_view.rs  arc_input_video_view.rs  arc_question_scale.rs  image_view.rs  info_view.rs  lock_in_video_view.rs  mod.rs  multichoice_view.rs  participant_id_view.rs  textinput_view.rs  video_view.rs
