[package]
name = "dynamic-base-rates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surface-dial-rs = { path = "../surface-dial-rs" }
iced_video_player = { path = "../iced_video_player" }
iced = { version = "0.7.0", features = ["canvas", "tokio", "debug"] }
iced_native = "0.8"
hidapi = { version = "1.2.3", default-features = false, features = ["linux-shared-hidraw"] }
flume = "0.10.12"
url = "2.2.2"
yaml-rust = "0.4"
native-dialog = "0.6.3"
rand = "0.8.5"
regex = "1"
